# alpaca-trading

./: .gitignore  ALPACADESK_PRD_v1.1.md  DEPLOYMENT.md  DEVELOPMENT.md  ITERATION_1_SUMMARY.md  ITERATION_2_SUMMARY.md  ITERATION_3_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  TESTING.md  index.html  package.json  vite.config.ts
.claude/: ralph-loop.local.md
electron/: main.ts  preload.ts
engine/: pyproject.toml
engine/src/alpacadesk_engine/: __init__.py  main.py
engine/src/alpacadesk_engine/api/: account.py  auth.py  backtest.py  orders.py  scheduler.py  strategies.py  strategies_db.py  streaming.py  system.py
engine/src/alpacadesk_engine/backtest/: __init__.py  engine.py
engine/src/alpacadesk_engine/brokers/: __init__.py  alpaca.py  interface.py
engine/src/alpacadesk_engine/indicators/: __init__.py
engine/src/alpacadesk_engine/services/: position_monitor.py  scheduler.py
engine/src/alpacadesk_engine/strategies/: base.py  bollinger.py  dual_ma.py  mean_reversion.py  momentum.py
engine/src/alpacadesk_engine/utils/: database.py  models.py  rate_limiter.py
src/: App.tsx  index.css
src/components/: LoginPage.css  LoginPage.tsx
src/components/backtest/: BacktestPanel.css  BacktestPanel.tsx
src/components/builder/: StrategyBuilder.css  StrategyBuilder.tsx
src/components/charts/: EquityChart.tsx
src/components/dashboard/: Dashboard.css  Dashboard.tsx
src/components/execution/: ExecutionQuality.css  (+1 more)
src/services/: authService.ts  backtestService.ts
src/store/: authStore.ts
src/types/: index.ts
(+2 files in other folders)
